# dtline

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
DTgRPCconnector/: .gitignore  AGENTS.md  CONTRIBUTING.md  Control.py  EXAMPLES.md  GenerationConfiguration.py  LICENSE  LoRA.py  PROJECT_STATUS.md  README.md  SamplerType.py  __init__.py  drawthings_client.py  imageService_pb2_grpc.py  model_metadata.py  requirements.txt  tensor_decoder.py  tensor_encoder.py
DTgRPCconnector/docs/: CLIENT_README.md  GEMINI.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  NEXT_SESSION_PLAN.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md
DTgRPCconnector/examples/: add_moodboard.py  example_usage.py  generate_image.py  generate_with_references.py  list_models.py
DTgRPCconnector/tests/: diagnose_server.py  test_all_512.py  test_chunked.py  test_client.py  test_final.py  test_kitten_generation.py  test_latent_dimensions.py  test_latent_only.py  test_minimal.py  test_no_dimensions.py  test_no_original.py  test_qwen_lora.py  test_scale_8.py  test_scalefactor.py  test_sdxl.py  test_simple.py  test_turbo.py  test_turbo_fixed.py  test_zero_dimensions.py
dtline/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  output.py  presets.py
settings/: aspectratio.txt  config.example.json
settings/negative_prompts/: anime_pony.json  chroma.json  none.json  realistic_quality.json  simple.json
settings/presets/: chroma.json  chroma_official.json  flux_dev.json  flux_official.json  flux_schnell.json  klein_official.json  pony.json  (+11 more)
